@@ -2,6 +2,7 @@ package com.agh.hydra.wiki.dao;
 
 import com.agh.hydra.wiki.entity.RecruitmentInfoDetailsEntity;
 import com.agh.hydra.wiki.entity.RecruitmentInfoEntity;
+import com.agh.hydra.wiki.entity.VoteEntity;
 import com.agh.hydra.wiki.model.RecruitmentInfoFilter;
 import org.apache.ibatis.annotations.Mapper;
 import org.apache.ibatis.annotations.Param;
@@ -10,7 +11,7 @@ import java.util.List;
 
 @Mapper
 public interface WikiRepository {
-    
+
     void createInformation(RecruitmentInfoEntity entity);
 
     void invalidateInformation(@Param("informationIds") List<Long> informationIds);
@@ -18,6 +19,8 @@ public interface WikiRepository {
     void updateInformationVote(@Param("userId") String userId,
                                @Param("informationId") Long informationId,
                                @Param("vote") String vote);
+
+    List<VoteEntity> getUserVotes(@Param("userId") String userId, @Param("informationIds") List<Long> informationIds);
 
     List<RecruitmentInfoDetailsEntity> getRecruitmentInformation(RecruitmentInfoFilter filter);
 
