@@ -1,3 +1,4 @@
+ - #51 add 'userVote' field to wiki info items, GET /recruitment/info/entries
  - #56 add 'X-HTTP-Method-Override' header support
  - #53 change Google API Client IDs
  - fix sonar issues
